--- a/.github/workflows/mlops-ci-workflow.yaml
+++ b/.github/workflows/mlops-ci-workflow.yaml
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  workflow:
+  e2e_mlops_workflow:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -24,3 +24,56 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
+      - name: Run Data Processing Tests
+        run: |
+          python src/data/run_processing.py \
+            --input data/raw/house_data.csv \
+            --output data/processed/cleaned_house_data.csv
+
+      - name: Do Feature Engineering
+        run: |
+         python src/features/engineer.py \
+         --input data/processed/cleaned_house_data.csv \
+         --output data/processed/featured_house_data.csv \
+         --preprocessor models/trained/preprocessor.pkl
+
+      - name: Setup MLflow
+        run: |
+         docker pull ghcr.io/mlflow/mlflow:latest
+         docker run -d -p 5555:5000 --name mlflow-server ghcr.io/mlflow/mlflow:latest \
+          mlflow server --host 0.0.0.0 \
+          --backend-store-uri sqlite:///mlflow.db \
+          --default-artifact-root /tmp/mlruns
+
+      - name: Train the Model
+        run: |
+         python src/models/train_model.py \
+         --config configs/model_config.yaml \
+         --data data/processed/featured_house_data.csv \
+         --models-dir models \
+         --mlflow-tracking-uri http://localhost:5555
+
+      - name: Cleaning up MLflow
+        run: |
+         docker stop mlflow-server
+         docker rm mlflow-server
+         docker rmi ghcr.io/mlflow/mlflow:latest
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          tags: yashjain1394/fastapi:${{ github.sha }}
+          context: "."
+          file: "Dockerfile"
+         
